# zk-physics

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: BENCHMARKS.md  CIRCUIT.md  PHYSICS.md
output/: proof.json
reference/: simulate.py  simulate_scaled.py  test_simulate.py  trace_collapse.json
src/: field_utils.rs  lib.rs  witness.rs
src/chips/: field_arith.rs  mod.rs  physics_step.rs
src/circuits/: mod.rs  sonoluminescence.rs
tests/: privacy.rs
