[package]
name = "zk-physics"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof of sonoluminescence physics simulation"

[workspace]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }
ff = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
